--- a/css/estilos.css
+++ b/css/estilos.css
@@ -11,6 +11,6 @@ body {
     /*border-radius: 1px solid red;*/
 }
 /*a:hover {
-    color: black;
+    color: pink;
     /*background-color: #96eeb9
 }*/
